--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
+---
 version: '3.7'
 
 services:
- 
-  app:
-    image: some-image
-    links:
-      - redis-sentinel
 
   redis-ui:
-    image: patrikx3/p3x-redis-ui:latest
+    image: patrikx3/p3x-redis-ui:2023.10.252
     ports:
       - 7843:7843
     depends_on:
@@ -17,37 +13,37 @@ services:
       - ./p3x-redis-ui-settings:/settings
 
   redis-master:
-    image: redis:7.0.5
+    image: redis:7.2.3
     volumes:
       - "./.data:/data"
     ports:
       - "6379:6379"
- 
+
   redis-slave:
-    image: redis:7.0.5
+    image: redis:7.2.3
     command: redis-server --slaveof redis-master 6379
     links:
       - redis-master
     volumes:
       - "./.data-slave:/data"
-     
+
   # Instance 1
   redis-sentinel:
-    build: 
+    build:
       context: ./redis-sentinel
     links:
       - redis-master
- 
+
   # Instance 2
   redis-sentinel2:
-    build: 
+    build:
       context: ./redis-sentinel
     links:
       - redis-master
- 
+
   # Instance 3
   redis-sentinel3:
-    build: 
+    build:
       context: ./redis-sentinel
     links:
       - redis-master
