--- a/redis-sentinel/sentinel.conf
+++ b/redis-sentinel/sentinel.conf
@@ -2,6 +2,7 @@ port 26379
 
 dir /tmp
 
+maxmemory $SENTINEL_MAXMEMORY
 sentinel resolve-hostnames yes
 sentinel monitor redismaster redis-master 6379 $SENTINEL_QUORUM
 sentinel down-after-milliseconds redismaster $SENTINEL_DOWN_AFTER
