--- a/redis-sentinel/Dockerfile
+++ b/redis-sentinel/Dockerfile
@@ -1,8 +1,9 @@
-FROM redis:7.2.3
+FROM redis:7.2.4
 
 ENV SENTINEL_QUORUM 2
 ENV SENTINEL_DOWN_AFTER 1000
 ENV SENTINEL_FAILOVER 1000
+ENV SENTINEL_MAXMEMORY 50mb
 
 RUN mkdir -p /redis
 
